# reverse-course-tools

./: .gitignore  BOT_SCRIPTING_API.md  CODE_REVIEW_PAIRING_UX_V2.md  DotaFarm_Описание.md  HANDOFF.md  LOADER_GUIDE.md  MIGRATION_PLAN.md  PLAN.md  PURCHASE_FIX_2026_05_23.md  RAM_BASELINE.md  RECONNECT_DESIGN.md  RESEARCH.md  SESSION_2026-04-17.md  SESSION_2026-04-18.md  SESSION_2026-04-18_ANTIBAN-A1.md  SESSION_2026-04-18_LUA-PORT.md  SESSION_2026-04-18_PhaseB_DONE.md  SESSION_2026-04-18_PhaseB_RE.md  SESSION_CRASH_RECOVERY_FIX.md  SESSION_PHASE_C.md  SESSION_PHASE_D.md  SESSION_PHASE_E.md  SILENT_FAILURE_AUDIT_PAIRING_UX_V2.md  TEST_HOST.md  UPDATE_LOG.txt  auto_purchase_test.py  capture_find_match.py  check_cuiengine_ptr.py  deploy.sh  dev_log.md  diff_ram.py  dota2_minify_wrapper.py  dump_offsets.py  dump_schema_offsets.py  find_gcclient_anchors.py  frida_deep_inspect.py  frida_dump_prep.py  frida_hijack.py  frida_hijack_auto.py  frida_purchase_full_args.py  (+71 more)
bootstrap/: CMakeLists.txt  main.cpp
cheat/: bot_brain.py  commands.py  game_data.py  game_state.py  gc.py  memory.py  offsets.py
config/: accept_template_bot1.json  accounts.json  farm.json  find_match_template.json  invite_template.json  last_party_invite.json  last_search.json  party_4501_bot1.json  party_recv.json  party_send.json  real_accept_4503.json  sandbox.json
data/: items.json  neutral_items.json  npc_abilities.json  npc_heroes.json  npc_units.json
docs/: CUSTOM_API.md  RECIPES.md  TESTER_QUICKSTART.md  UCZONE_API_REFERENCE.md
dota2_minify_wrapper_build/: README.md  wrapper.spec
ops/: latest.sh  watch.sh
orchestrator/: CMakeLists.txt  dist_readme.txt  package.sh
orchestrator/design_mockup/: index.html
orchestrator/docs/: MINIFIER_RESEARCH.md  MINIFIER_VPK_RESEARCH.md  PORTABLE_AUDIT.md
orchestrator/scripts/: encrypt_resource.py  fetch_hero_portraits.sh
orchestrator/src/: auth.h  bot_dota_dir.cpp  bot_dota_dir.h  config.cpp  config.h  crash_watchdog.cpp  crash_watchdog.h  dota_launcher.cpp  dota_launcher.h  dota_minifier.cpp  dota_minifier.h  dota_minifier_test.cpp  gsi_install.cpp  gsi_install.h  gsi_server.cpp  gsi_server.h  gui.cpp  gui.h  hero_portraits.cpp  hero_portraits.h  hwid.h  hwid_spoof.cpp  hwid_spoof.h  injector.cpp  injector.h  main.cpp  manual_mapper.h  match_pairing_fsm.cpp  match_pairing_fsm.h  mem_reclaim.cpp  mem_reclaim.h  orchestrator.cpp  orchestrator.h  orchestrator_ipc.cpp  orchestrator_ipc.h  orchestrator_ipc_slave.cpp  orchestrator_ipc_slave.h  orchestrator_relay_client.cpp  orchestrator_relay_client.h  pair_code.cpp  (+23 more)
orchestrator/src/crypto/: aes.h  crypto.h  embed_secret.h  sealed_file.h
protect/: protect.sh
protect/templates/: README_HOWTO.md  template.vmp  template_x64_dll.tmd  template_x64_exe.tmd
proxydivert/: CMakeLists.txt
proxydivert/src/: divert_engine.cpp  divert_engine.h  tcp_nat.cpp  tcp_nat.h  udp_nat.cpp  udp_nat.h
proxyhook/: CMakeLists.txt
proxyhook/src/: config.cpp  config.h  dllmain.cpp  health.cpp  health.h  hooks.h  hooks_hwid.cpp  hooks_process.cpp  hooks_tcp.cpp  hooks_udp.cpp  hwid_gen.cpp  hwid_gen.h  socks5_client.cpp  socks5_client.h
proxyhook/test/: test_hwid_gen.cpp
proxyrelay/: CMakeLists.txt
proxyrelay/src/: pid_proxy_map.cpp  pid_proxy_map.h  relay.cpp  relay.h
relay/: Dockerfile  README.md  admin.go  docker-compose.yml  go.mod  http_test_helpers.go  main.go  pair.go  pair_test.go  quota.go  server.go  smoke_test.py  users.example.json  users.go
scripts/: patch_farm_pairing.ps1  relax_crash_recovery.ps1
scripts_source/: docs.rar
scripts_source/bots/: ability_build.lua  bot_controller.lua  config.lua  context.lua  fsm.lua  item_build.lua  lane_config.lua
scripts_source/bots/heroes/: README.md  drow_ranger.lua  gyrocopter.lua  init.lua  jakiro.lua  lich.lua  lifestealer.lua  lina.lua  lion.lua  ogre_magi.lua  pudge.lua  sniper.lua  viper.lua  weaver.lua  witch_doctor.lua  zuus.lua
scripts_source/bots/states/: init.lua  jungle_farm.lua  lane_farm.lua  lane_wait.lua  meteor_squad.lua  push.lua  respawn.lua  retreat.lua  side_bait.lua
scripts_source/bots/util/: anti_ban.lua  camps.lua  combat.lua  coop.lua  items.lua  movement.lua  vec.lua
scripts_source/docs/: ABOUT.md  API_REFERENCE.md  ARCHITECTURE.md  COOKBOOK.md  TESTER_QUICKSTART.md
tests/: pairing_smoke.md
